Closed
Bug 999902
Opened 12 years ago
Closed 12 years ago
[Flatfish] Failed to build Flatfish, error: 'class android::GonkNativeWindowClient' has no member named 'getIGraphicBufferProducer'
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
2.0 S1 (9may)
People
(Reporter: vicamo, Assigned: jhlin)
References
()
Details
Attachments
(2 files, 2 obsolete files)
|
10.78 KB,
text/plain
|
Details | |
|
6.32 KB,
patch
|
jhlin
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #911046 +++
media/webrtc/signaling/src/media-conduit/WebrtcOMXH264VideoCodec.cpp: In member function 'android::status_t mozilla::WebrtcOMXDecoder::ConfigureWithParamSets(const android::sp<android::MetaData>&)':
media/webrtc/signaling/src/media-conduit/WebrtcOMXH264VideoCodec.cpp:295:52: error: 'class android::GonkNativeWindowClient' has no member named 'getIGraphicBufferProducer'
media/webrtc/signaling/src/media-conduit/WebrtcOMXH264VideoCodec.cpp: In member function 'webrtc::I420VideoFrame* mozilla::WebrtcOMXDecoder::GenerateVideoFrame(const mozilla::EncodedFrame&, uint32_t, const android::sp<android::ABuffer>&)':
media/webrtc/signaling/src/media-conduit/WebrtcOMXH264VideoCodec.cpp:482:65: error: invalid static_cast from type 'android::RefBase*' to type 'android::GraphicBuffer*'
| Assignee | ||
Comment 1•12 years ago
|
||
| Assignee | ||
Comment 2•12 years ago
|
||
Some partners are still using JB 4.2 (API level 17). Change build config to make sure WebRTC OMX code will not be enabled on those devices.
Attachment #8410799 -
Attachment is obsolete: true
Attachment #8410887 -
Flags: review?(rjesup)
Updated•12 years ago
|
Attachment #8410887 -
Flags: review?(rjesup) → review+
| Assignee | ||
Comment 3•12 years ago
|
||
update commit message & carry r+ from jesup.
Assignee: nobody → jolin
Attachment #8410887 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #8410906 -
Flags: review+
| Assignee | ||
Comment 4•12 years ago
|
||
Keywords: checkin-needed
Comment 5•12 years ago
|
||
Keywords: checkin-needed
Comment 6•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.0 S1 (9may)
You need to log in
before you can comment on or make changes to this bug.
Description
•