Bug 999902 - Enable WebRTC OMX codec only when Android version >= 18. r=jesup